--- a/src/client/style.css
+++ b/src/client/style.css
@@ -5,13 +5,16 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+  }
+
+  html {
+    background: black;
+    transition: background 0.5s;
   }
 
   body {
     opacity: 0;
-    background: black;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s, transform 0.5s;
   }
 
   #joystick-bg {
@@ -28,6 +31,7 @@
     left: 76px;
     top: 122.5px;
     transform-origin: right center;
+    -webkit-transform-origin: right center;
     opacity: 0;
   }
 
@@ -45,4 +49,11 @@
     width: 100%;
     height: 100%;
     z-index: 1;
+  }
+
+  @media only screen and (orientation: portrait) {
+    body {
+      transform: translateX(375px) rotate(90deg);
+      transform-origin: top left;
+    }
   }
